--- a/package.json
+++ b/package.json
@@ -27,5 +27,7 @@
     "electron": "^4.1.4",
     "electron-builder": "^20.40.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "ping-monitor": "^0.4.4"
+  }
 }
