--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
     "dist": "electron-builder",
     "generate-certificate": "openssl req -x509 -newkey rsa:4096 -keyout key.pem -out gensec.pem -days 7 -nodes",
     "mongo-dump": "mongodump -d gensec -o backup",
-    "mongo-restore": "mongorestore -d gensec backup"
+    "mongo-restore": "mongorestore -d gensec backup",
+    "compile": "tsc && cp -r html build && cp -r css build && cp -r assets build"
   },
-  "main": "./mjs/main.js",
+  "main": "./build/mjs/main.js",
   "author": "William Roque",
   "license": "ISC",
   "devDependencies": {
+    "@types/rimraf": "^3.0.0",
+    "@types/unzipper": "^0.10.3",
+    "electron": "^10.1.2",
     "electron-builder": "^20.40.2",
-    "electron": "^10.1.2"
+    "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/mongodb": "^3.5.27",
     "electron-settings": "^4.0.2",
     "electron-window-state": "^5.0.3",
     "mongodb": "^3.6.2",
